# py_atmospeed

./: .gitignore  GUIDE.md  README.md  pyproject.toml
src/atmospeed/: __init__.py  _speed_conv.py  altitude.py  atmo.py  cli.py  constants.py  convert.py  ratio.py  speed.py  temperature.py  units.py
tests/: test_altitude.py  test_atmosphere.py  test_cli.py  test_speed.py
