[project]
name = "py-atmospeed"
version = "1.0.0"
description = "Standard and non-standard atmosphere properties and airspeed conversions based on the 1976 US Standard Atmosphere (NASA-TM-X-74335)"
readme = "README.md"
authors = [
    { name = "Michael Vogt", email = "dev@aeroperf.com" }
]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
license = "MIT"
keywords = ["atmosphere", "airspeed", "aviation", "aerospace", "ISA", "standard-atmosphere"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[project.scripts]
atmospeed = "atmospeed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atmospeed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
